# chatBetSite

./: README.md  manage.py  pyproject.toml
accounts/: models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_name_userdata_username.py  0002_userdata_bonus_money_balance_and_more.py  0003_blockeduser.py
auth/: models.py  views.py
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/bet/: models.py  serializers.py  urls.py  views.py
backend/chat/: models.py  urls.py  views.py
backend/core/: asgi.py  consumers.py  routing.py  settings.py  urls.py
backend/scraper/: urls.py
bet/: consumers.py  factories.py  models.py  serializers.py  views.py
bet/migrations/: 0001_initial.py  0002_winonlybet_alter_bet_bet_type_alter_bet_outcome_and_more.py  0003_alter_bet_bet_type.py  0004_bet_content_type_bet_object_id.py  0005_remove_bet_content_type_remove_bet_object_id.py  0006_alter_bet_options_alter_overunderbet_options_and_more.py  0007_alter_bet_options_alter_overunderbet_options_and_more.py  0008_alter_bet_options_alter_overunderbet_options_and_more.py  0010_event_uuid.py  0011_remove_overunderbet_subject_bet_subject.py  0012_alter_bet_subject.py  0013_multibet_uuid.py  0014_multibet_state.py  0017_bet_description_alter_bet_outcome_and_more.py  (+2 more)
chat/: consumers.py  models.py  routing.py  serializers.py  token_middleware.py  views.py
chatApp/: models.py
chatBetSite/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
frontend/: angular.json  package-lock.json  package.json
scraper/: views.py
(+89 files in other folders)
